# capstone-simple

./: .gitignore  MODEL_COMPARISON_GUIDE.md  README.md  main.py  pyproject.toml  report.docx  setup_and_run.ps1  training_results.md
data/samples/: test_sample.csv
models/: best_hyperparameters.json  model.json.old  selector.pkl.old
models/no_smote_chi2/: model.json  model_metrics.json  preprocessing_config.json  scaler.pkl
models/no_smote_no_chi2/: label_mapping.json  model_metrics.json  preprocessing_config.json
models/smote_chi2/: model.json  model_metrics.json  preprocessing_config.json
models/smote_no_chi2/: model.json  model_metrics.json  preprocessing_config.json
old_scripts/: bar_plot.py  create_test_samples.py  evaluate_model.py  heatmap.py  ids.py  inference.py  preprocess.py  proportional_split.py  split_dataset.py  train_model.py  train_model_simple.py  train_utils.py  violin_plot.py
samples/: all_attack_types.csv
scripts/: compare_variants.py  download.ps1  is_gpu_available.py  train_all_variants.py
src/ids_ml/: __init__.py
src/ids_ml/cli/: download.py  ids.py  preprocess.py  sample_generator.py
src/ids_ml/data/: preprocess.py  split.py
src/ids_ml/models/: evaluate.py  inference.py  train.py  utils.py
tests/: __init__.py
