[project]
name = "ids-ml"
version = "0.1.0"
description = "Machine Learning-based Intrusion Detection System using XGBoost"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "optuna-integration[xgboost]>=4.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.0",
]

[project.scripts]
ids = "ids_ml.cli.ids:main"
ids-sample-gen = "ids_ml.cli.sample_generator:main"
ids-train = "ids_ml.models.train:main"
ids-evaluate = "ids_ml.models.evaluate:main"
ids-download = "ids_ml.cli.download:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ids_ml"]
